fix 统计数据接口参数修改，适应prometheus
