# handler/hdata/validator_voting_power.go
@@ -4,6 +4,8 @@ package hdata
 
 import (
 	"net/http"
+	"strconv"
+	"time"
 
 	"github.com/QOSGroup/qmoon/handler/middleware"
 	"github.com/QOSGroup/qmoon/lib"
@@ -32,7 +34,23 @@ func validatorVotingPowerGin() gin.HandlerFunc {
 		}
 
 		address := lib.Bech32AddressToHex(c.Param("address"))
-		res, err := metric.QueryValidatorVotingPower(node.ChanID, address)
+		start, err := strconv.ParseInt(c.Query("start"), 10, 64)
+		if err != nil {
+			c.JSON(http.StatusOK, types.RPCInvalidParamsError("", err))
+			return
+		}
+		end, err := strconv.ParseInt(c.Query("end"), 10, 64)
+		if err != nil {
+			c.JSON(http.StatusOK, types.RPCInvalidParamsError("", err))
+			return
+		}
+		step, err := strconv.ParseInt(c.Query("step"), 10, 64)
+		if err != nil {
+			c.JSON(http.StatusOK, types.RPCInvalidParamsError("", err))
+			return
+		}
+		res, err := metric.QueryValidatorVotingPower(node.ChanID, address,
+			time.Unix(start, 0), time.Unix(end, 0), time.Second*time.Duration(step))
 		if err != nil {
 			c.JSON(http.StatusOK, types.RPCServerError("", err))
 			return
